--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -146,9 +146,9 @@
 
     <script>
 
-        $(document).ready(function () {
+        window.addEventListener('load', function () {
             $("#loader").fadeOut(300);
-        });
+        })
 
     </script>
 
