--- a/AminWeb/Areas/User/Views/Chat/ViewChat.cshtml
+++ b/AminWeb/Areas/User/Views/Chat/ViewChat.cshtml
@@ -9,27 +9,31 @@
         <ul class="uk-padding-remove">
             @foreach (var item in Model)
             {
-                <div class="message column">
-                    @if (item.SenderId != 0)
-                    {
+                if (item.SenderId != 0)
+                {
+                    <li class="message you column">
                         <div class="row">
-                            <span class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-left">@item.Name</span>
+                            <!-- MEHDIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII  -->
+                            <a href="~/Dashboard/6/mehdi" class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-left">@item.Name</a>
                             <span class="date"> @item.TimeSent.ToShamsi()</span>
                         </div>
                         <p class="text">
                             @item.Message
                         </p>
-                    }
-                    else
-                    { <div class="row">
+                    </li>
+                }
+                else
+                {
+                    <li class="message column">
+                        <div class="row">
                             <span class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-right">شما</span>
                             <span class="date"> @item.TimeSent.ToShamsi()</span>
                         </div>
                         <p class="text">
                             @item.Message
                         </p>
-                    }
-                </div>
+                    </li>
+                }
             }
         </ul>
     </div>
