--- a/AminWeb/Content/Styles/Areas/UserDashboard.css
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.css
@@ -1,4 +1,5 @@
-﻿/*#region name*/
+﻿@charset "UTF-8";
+/*#region name*/
 /*#endregion */
 /*#region Global */
 /*#endregion */
@@ -307,3 +308,14 @@ backdrop-filter: saturate(80%);
       padding-top: 16px; }
       .chat-room .message .date {
         color: #999999 !important; }
+    .chat-room .message.you .text::before {
+      content: '•';
+      width: 8px;
+      height: 8px;
+      -moz-border-radius: 4px 4px 4px 4px;
+      -webkit-border-radius: 4px 4px 4px 4px;
+      border-radius: 4px 4px 4px 4px;
+      /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+      color: #F94646; }
