--- a/AminWeb/Views/ShopCart/Index.cshtml
+++ b/AminWeb/Views/ShopCart/Index.cshtml
@@ -37,7 +37,7 @@
                         <label>کسر از کیف پول</label>
                         <div class="row uk-margin-auto-left">
                             <span class="toman">تومان</span>
-                            <a href="/ShopCart/VerifyBalance/@Model.VideoId" class="price">@Model.BalanceUser</a>
+                            <a href="/ShopCart/VerifyBalance" class="price">@Model.BalanceUser</a>
                         </div>
                     </div>
                 }
@@ -52,12 +52,12 @@
                     </div>
                 }
                 <div class="divider"></div>
-                <div class="pal">
+                <a class="pal"  href="/ShopCart/Payment">
                     <div>
                         <img src="~/Resources/Static/Vector/Zarinpal.svg" alt="لوگو زرین پال" />
                         <span>زرین پال</span>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
