--- a/AminWeb/Content/Styles/Areas/UserDashboard.css
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.css
@@ -319,3 +319,12 @@ backdrop-filter: saturate(80%);
     -webkit-border-radius: 0;
     border-radius: 0;*/
       color: #F94646; }
+
+.edit img, .edit video {
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  width: 100%; }
