--- a/AminWeb/Content/Styles/Pages/VideoView.css
+++ b/AminWeb/Content/Styles/Pages/VideoView.css
@@ -169,6 +169,7 @@ backdrop-filter: saturate(80%);
 
 .video-playback {
   width: 100%;
+  max-height: 480px;
   -moz-border-radius: 8px 8px 8px 8px;
   -webkit-border-radius: 8px 8px 8px 8px;
   border-radius: 8px 8px 8px 8px;
