--- a/AminWeb/Views/Video/VideoView.cshtml
+++ b/AminWeb/Views/Video/VideoView.cshtml
@@ -78,8 +78,7 @@
             }
             else
             {
-                <img class="thumbnail" src="~/Resources/Video/Image/Thumb/@Model.MainImage" alt="Thumbnail" />
-
+                <img class="video-playback uk-margin-auto-left uk-margin-auto-right white-area-margin thumbnail" src="~/Resources/Video/Image/Thumb/@Model.MainImage" alt="Thumbnail" />
             }
 
         }
@@ -130,7 +129,7 @@
                     {
                         if (Model.PlaylistId != null)
                         {
-                            <a href="/ShopCart/Index/@Model.VideoId" class="btn-primary">
+                            <a href="/ShopCart/Index/@Model.VideoId" class="btn btn-primary">
                                 خرید ویدیوهای این کلاس
                             </a>
                             <div class="price row uk-margin-auto-top uk-margin-auto-bottom uk-margin-small-right">
@@ -142,7 +141,7 @@
                         }
                         else
                         {
-                            <a  href="/ShopCart/Index/@Model.VideoId" class="btn-primary">
+                            <a href="/ShopCart/Index/@Model.VideoId" class="btn btn-primary">
                                 خرید این ویدیو
                             </a>
                             <div class="price row uk-margin-auto-top uk-margin-auto-bottom uk-margin-small-right">
